page de details pour visualisation des dossiers pas termine tous les fonctionnement ok

--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -11,7 +11,7 @@
                   <div class="slide-img-bg" style="background-image: url('assets/images/originals/abstract14.jpg');"></div>
                   <div class="slider-content">
                     <h3>GEPAD</h3>
-                    <p>L'application de gestion électronique  des process administratifs et documents </p>
+                    <p>{{ 'Login.Motto' | translate}} </p>
                   </div>
                 </div>
               </div>
@@ -21,8 +21,8 @@
                   <div class="slide-img-bg" style="background-image: url('assets/images/originals/abstract16.jpg');">
                   </div>
                   <div class="slider-content">
-                    <h3>Sécurité, Traçabilité</h3>
-                    <p>Votre application qui vous garantie la sécurité et la traçabilité! </p>
+                    <h3>{{ 'Login.Terms1' | translate}}</h3>
+                    <p>{{ 'Login.Terms2' | translate}} </p>
                   </div>
                 </div>
               </div>
@@ -32,8 +32,8 @@
                   <div class="slide-img-bg" style="background-image: url('assets/images/originals/abstract17.jpg');">
                   </div>
                   <div class="slider-content">
-                    <h3>Stockage organisé</h3>
-                    <p> Retrouvez vos dossiers traités en tempds réel! </p>
+                    <h3>{{ 'Login.Terms3' | translate}}</h3>
+                    <p> {{ 'Login.Terms4' | translate}} </p>
                   </div>
                 </div>
               </div>
