--- a/src/app/private/containers/visitor/containers/visitor-home/visitor-home.component.html
+++ b/src/app/private/containers/visitor/containers/visitor-home/visitor-home.component.html
@@ -5,7 +5,7 @@
                 <div class="page-title-wrapper">
                     <div class="page-title-heading">
                         <div class="page-title-icon">
-                            <i class="pe-7s-phone icon-gradient bg-premium-dark">
+                            <i class="pe-7s-home icon-gradient bg-premium-dark">
                             </i>
                         </div>
                         <div><span class="text-success"><h4>{{ 'VisitorHome.Welcome' | translate }}</h4></span> <strong><h5>{{ 'VisitorHome.WorkSpace' | translate }}</h5></strong>
@@ -220,7 +220,7 @@
                                                     class="pe-7s-mail text-muted fsize-2"></i></div>
                                             <div class="widget-content-left">
                                                 <div class="widget-heading">
-                                                    Email</div>
+                                                    Email  </div>
                                             </div>
                                             <div class="widget-content-right">
                                                 {{ user.email ? user.email : ('VisitorHome.CompleteProfile' | translate) }}
