--- a/src/app/private/containers/administrator/containers/admin-home/admin-home.component.html
+++ b/src/app/private/containers/administrator/containers/admin-home/admin-home.component.html
@@ -5,7 +5,7 @@
                 <div class="page-title-wrapper">
                     <div class="page-title-heading">
                         <div class="page-title-icon">
-                            <i class="pe-7s-phone icon-gradient bg-premium-dark">
+                            <i class="pe-7s-home icon-gradient bg-premium-dark">
                             </i>
                         </div>
                         <div><span class="text-success"><h4>{{ 'AdminHome.Welcome' | translate }}</h4></span> <strong><h5>{{ 'AdminHome.WorkSpace' | translate }}</h5></strong>
