--- a/src/app/private/containers/administrator/containers/documents/accepted-documents/accepted-documents.component.html
+++ b/src/app/private/containers/administrator/containers/documents/accepted-documents/accepted-documents.component.html
@@ -5,7 +5,7 @@
                 <div class="page-title-wrapper">
                     <div class="page-title-heading">
                         <div class="page-title-icon">
-                            <i class="pe-7s-phone icon-gradient bg-premium-dark">
+                            <i class="pe-7s-home icon-gradient bg-premium-dark">
                             </i>
                         </div>
                         <div><span class="text-success"><h4>{{ 'AdminAcceptedDocument.Foldersintreatment' | translate }}</h4></span> <strong><h5>{{ 'AdminAcceptedDocument.Workspace' | translate }}</h5></strong>
@@ -25,12 +25,24 @@
                     </span>
                     <strong><u>{{ 'AdminAcceptedDocument.NoteSecurite1' | translate }}</u> </strong>  {{ 'AdminAcceptedDocument.NoteSecurite2' | translate }}
                 </div>
-
+                <div *ngIf="isError" class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <strong>{{ message?.title }}: </strong>{{ message?.content }}
+                    <button type="button" (click)="cancel()" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div *ngIf="isSuccess" class="alert alert-success alert-dismissible fade show" role="alert">
+                    <strong>{{ message?.title }}: </strong>{{ message?.content }}
+                    <button type="button" (click)="cancel()" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                
                 <!---->
                 <div class="tabs-animation">
                     <div class="main-card mb-3 card">
                         <div class="card-header">
-                            <i class="header-icon pe-7s-shield icon-gradient bg-love-kiss"> </i>
+                            <i class="header-icon pe-7s-check icon-gradient bg-love-kiss"> </i>
                             {{ 'AdminAcceptedDocument.Foldersintreatment' | translate }}
                         </div>
                         <div class="card-body">
@@ -43,7 +55,6 @@
                                         <th>{{ 'AdminAcceptedDocument.Name' | translate }}</th>
                                         <th>{{ 'AdminAcceptedDocument.JointFiles' | translate }}</th>
                                         <th>{{ 'AdminAcceptedDocument.SubmissionDate' | translate }}</th>
-                                        <th class="text-center">{{ 'AdminAcceptedDocument.Percentage' | translate }}</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
@@ -57,24 +68,10 @@
                                         <td>{{ item?.file_number }} piece(s) jointe</td>
                                         <td>{{ parser(item?.created_at) }}</td>
                                         <td class="text-center">
-                                            <div class="widget-content p-0">
-                                                <div class="widget-content-outer">
-                                                    <div class="widget-content-wrapper">
-                                                        <div class="widget-content-left pr-2">
-                                                            <div class="widget-numbers fsize-1 text-primary">71%</div>
-                                                        </div>
-                                                        <div class="widget-content-right w-100">
-                                                            <div class="progress-bar-xs progress">
-                                                                <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="71" aria-valuemin="0" aria-valuemax="100" style="width: 71%;"></div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td class="text-center">
                                             <div role="group" class="btn-group-sm btn-group">
-                                                <button class="mr-2 btn-icon btn-icon-only btn btn-success" (click)="details(item)" title="cliquer pour voir les details"><i class="pe-7s-info btn-icon-wrapper"> </i></button>
+                                                <button class="mr-2 btn-icon btn-icon-only btn btn-secondary" (click)="details(item)" title="cliquer pour voir les details"><i class="pe-7s-info btn-icon-wrapper"> </i></button>
+                                                <button class="mr-2 btn-icon btn-icon-only btn btn-success" (click)="approuvedFolder(item)" title="approuver le traitement du dossier"><i class="pe-7s-pen btn-icon-wrapper"> </i></button>
+                                                <button class="mr-2 btn-icon btn-icon-only btn btn-danger" (click)="rejectFolder(item)" title="rejeter le dossier"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
                                             </div>
                                         </td>
                                     </tr>
