--- a/src/app/private/containers/administrator/containers/index/left-side/left-side.component.html
+++ b/src/app/private/containers/administrator/containers/index/left-side/left-side.component.html
@@ -36,7 +36,7 @@
                 <li class="app-sidebar__heading">Menu</li>
                 <li class="mm-active">
                     <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.dossiers')">
-                        <i class="metismenu-icon pe-7s-rocket"></i>
+                        <i class="metismenu-icon pe-7s-drawer"></i>
                         {{ "AdminLeftSide.MyFiles" | translate }}
                         <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                     </a>
@@ -74,7 +74,7 @@
                 </li>
                 <li class="mm-active">
                     <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.profil')">
-                        <i class="metismenu-icon pe-7s-rocket"></i>
+                        <i class="metismenu-icon pe-7s-id"></i>
                         {{ "AdminLeftSide.Profile" | translate }}
                         <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                     </a>
