--- a/src/app/private/containers/employee/containers/update-infos/update-info.component.html
+++ b/src/app/private/containers/employee/containers/update-infos/update-info.component.html
@@ -5,10 +5,10 @@
                 <div class="page-title-wrapper">
                     <div class="page-title-heading">
                         <div class="page-title-icon">
-                            <i class="pe-7s-phone icon-gradient bg-premium-dark">
+                            <i class="pe-7s-home icon-gradient bg-premium-dark">
                             </i>
                         </div>
-                        <div><span class="text-success"><h4>{{ 'AdminUpdateInfo.Welcome' | translate}}</h4></span> <strong><h5>Ceci est votre espace de travail</h5></strong>
+                        <div><span class="text-success"><h4>{{ 'AdminUpdateInfo.Welcome' | translate}}</h4></span> <strong><h5>{{ 'AdminUpdateInfo.WorkSpace' | translate}}</h5></strong>
                             <div class="page-title-subheading">
                                 {{ 'AdminUpdateInfo.editProfile' | translate}}
                             </div>
@@ -23,7 +23,7 @@
                     <span class="font-icon-wrapper font-icon-md mr-2">
                         <i class="pe-7s-shield" size="medium"> </i>
                     </span>
-                    <strong><u>{{ 'AdminUpdateInfo.NoteSecurite1' | translate}}:</u> </strong>  {{ 'AdminUpdateInfo.NoteSecurite2' | translate}}
+                    <strong><u>{{ 'AdminUpdateInfo.NoteSecurite1' | translate}}</u> </strong>  {{ 'AdminUpdateInfo.NoteSecurite2' | translate}}
                 </div>
                 <div class="mx-auto app-login-box col-sm-12 col-md-11 col-lg-11 pl-2 pr-2" style="width: 100%;">
                     <div>
@@ -237,7 +237,7 @@
                                         class="btn-wide btn-shadow btn-hover-shine btn btn-md btn-pill btn-danger mb-4"
                                         style="width: 47.5%; justify-content: center; align-items: center; margin-top: inherit;">
                                         <p *ngIf="!isLoading" style="font-size: medium; padding: 0px; margin: 5px; position: relative;">
-                                            Mettre a jour </p>
+                                            {{ 'SignUp.Update' | translate }} </p>
                                         <div *ngIf="isLoading" style="padding: 15px; margin-left: 50%;">
                                             <div class="ball-scale-multiple">
                                                 <div style="background-color: white;"></div>
@@ -286,7 +286,8 @@
                                                     class="pe-7s-smile text-muted fsize-2"></i></div>
                                             <div class="widget-content-left">
                                                 <div class="widget-heading">
-                                                    Nom</div>
+                                                    {{ 'VisitorHome.Name' | translate }}
+                                                </div>
                                             </div>
                                             <div class="widget-content-right">
                                                 <div class="widget-heading">
@@ -302,7 +303,7 @@
                                                     class="pe-7s-smile text-muted fsize-2"></i></div>
                                             <div class="widget-content-left">
                                                 <div class="widget-heading">
-                                                    Prenom</div>
+                                                    {{ 'VisitorHome.Surname' | translate }}</div>
                                             </div>
                                             <div class="widget-content-right">
                                                 {{ user.last_name ? user.last_name : 'Completer votre profil' }}
@@ -332,10 +333,10 @@
                                                     class="pe-7s-call text-muted fsize-2"></i></div>
                                             <div class="widget-content-left">
                                                 <div class="widget-heading">
-                                                Numero de telephone</div>
+                                                    {{ 'VisitorHome.PhoneNumber' | translate }}</div>
                                             </div>
                                             <div class="widget-content-right">
-                                                {{ user.tel ? user.tel : 'Completer votre profil' }}
+                                                {{ user.tel ? user.tel : ('VisitorHome.CompleteProfile' | translate) }}
                                             </div>
                                         </div>
                                     </div>
@@ -347,10 +348,10 @@
                                                     class="pe-7s-note2 text-muted fsize-2"></i></div>
                                             <div class="widget-content-left">
                                                 <div class="widget-heading">
-                                                    date de naissance</div>
+                                                    {{ 'VisitorHome.BirthDate' | translate }}</div>
                                             </div>
                                             <div class="widget-content-right">
-                                                {{ user.birth_date ? user.birth_date : 'Completer votre profil' }}
+                                                {{ user.birth_date ? user.birth_date : ('VisitorHome.CompleteProfile' | translate) }}
                                             </div>
                                         </div>
                                     </div>
@@ -362,10 +363,10 @@
                                                     class="pe-7s-home text-muted fsize-2"></i></div>
                                             <div class="widget-content-left">
                                                 <div class="widget-heading">
-                                                    Lieu de naissance</div>
+                                                    {{ 'VisitorHome.BirthPlace' | translate }}</div>
                                             </div>
                                             <div class="widget-content-right">
-                                                {{ user.birth_place ? user.birth_place : 'Completer votre profil' }}
+                                                {{ user.birth_place ? user.birth_place : ('VisitorHome.CompleteProfile' | translate) }}
                                             </div>
                                         </div>
                                     </div>
@@ -377,7 +378,7 @@
                                                     class="pe-7s-pen text-muted fsize-2"></i></div>
                                             <div class="widget-content-left">
                                                 <div class="widget-heading">
-                                                    Langue parlee</div>
+                                                    {{ 'VisitorHome.SpokenLang' | translate }}</div>
                                             </div>
                                             <div class="widget-content-right">
                                                {{ displayUserLanguage()}}
