--- a/src/app/private/containers/index/nav-bar/nav-bar.component.html
+++ b/src/app/private/containers/index/nav-bar/nav-bar.component.html
@@ -514,7 +514,7 @@
                                     <div class="menu-header-image opacity-05" style="background-image: url('assets/images/dropdown-header/city2.jpg');"></div>
                                     <div class="menu-header-content text-center text-white">
                                         <h6 class="menu-header-subtitle mt-0">
-                                            Choose Language
+                                            {{ 'NavBar.ChooseLanguage' | translate }}
                                         </h6>
                                     </div>
                                 </div>
