--- a/src/app/private/containers/visitor/containers/documents/accepted-documents/accepted-documents.component.html
+++ b/src/app/private/containers/visitor/containers/documents/accepted-documents/accepted-documents.component.html
@@ -5,7 +5,7 @@
                 <div class="page-title-wrapper">
                     <div class="page-title-heading">
                         <div class="page-title-icon">
-                            <i class="pe-7s-phone icon-gradient bg-premium-dark">
+                            <i class="pe-7s-home icon-gradient bg-premium-dark">
                             </i>
                         </div>
                         <div><span class="text-success"><h4>{{ 'AcceptedDocument.Foldersintreatment' | translate }}</h4></span> <strong><h5>{{ 'AcceptedDocument.Workspace' | translate }}</h5></strong>
@@ -30,7 +30,7 @@
                 <div class="tabs-animation">
                     <div class="main-card mb-3 card">
                         <div class="card-header">
-                            <i class="header-icon pe-7s-shield icon-gradient bg-love-kiss"> </i>
+                            <i class="header-icon pe-7s-check icon-gradient bg-love-kiss"> </i>
                             {{ 'AcceptedDocument.Foldersintreatment' | translate }}
                         </div>
                         <div class="card-body">
@@ -74,7 +74,7 @@
                                         </td>
                                         <td class="text-center">
                                             <div role="group" class="btn-group-sm btn-group">
-                                                <button class="mr-2 btn-icon btn-icon-only btn btn-success" (click)="details(item)" title="cliquer pour voir les details"><i class="pe-7s-info btn-icon-wrapper"> </i></button>
+                                                <button class="mr-2 btn-icon btn-icon-only btn btn-success" (click)="details(item)" title="{{ 'PendingDocument.Info' | translate}}"><i class="pe-7s-info btn-icon-wrapper"> </i></button>
                                             </div>
                                         </td>
                                     </tr>
