--- a/src/app/private/containers/visitor/containers/documents/rejected-documents/rejected-documents.component.html
+++ b/src/app/private/containers/visitor/containers/documents/rejected-documents/rejected-documents.component.html
@@ -5,7 +5,7 @@
                 <div class="page-title-wrapper">
                     <div class="page-title-heading">
                         <div class="page-title-icon">
-                            <i class="pe-7s-phone icon-gradient bg-premium-dark">
+                            <i class="pe-7s-home icon-gradient bg-premium-dark">
                             </i>
                         </div>
                         <div><span class="text-success"><h4>{{ 'RejectedDocument.RejectedFiles' | translate }}</h4></span> <strong><h5>{{ 'RejectedDocument.Workspace' | translate }}</h5></strong>
@@ -30,7 +30,7 @@
                 <div class="tabs-animation">
                     <div class="main-card mb-3 card">
                         <div class="card-header">
-                            <i class="header-icon pe-7s-shield icon-gradient bg-love-kiss"> </i>
+                            <i class="header-icon pe-7s-junk icon-gradient bg-love-kiss"> </i>
                             {{ 'RejectedDocument.RejectedFolders' | translate}}
                         </div>
                         <div class="card-body">
@@ -55,12 +55,12 @@
                                         </td>
                                         <td>{{ display(item?.name) }}</td>
                                         <td>{{ display(item?.description) }}</td>
-                                        <td>{{ item?.file_number }} piece(s) jointe</td>
+                                        <td>{{ item?.file_number }} {{ 'RejectedDocument.JointFiles' | translate}}</td>
                                         <td>{{ parser(item?.created_at) }}</td>
                                         <td>
                                             <div role="group" class="btn-group-sm btn-group">
-                                                <button class="mr-2 btn-icon btn-icon-only btn btn-success" (click)="details(item)" title="cliquer pour voir les details"><i class="pe-7s-info btn-icon-wrapper"> </i></button>
-                                                <button class="mr-2 btn-icon btn-icon-only btn btn-danger" (click)="delete(item)" title="cliquer pour supprimer"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
+                                                <button class="mr-2 btn-icon btn-icon-only btn btn-success" (click)="details(item)" title="{{ 'PendingDocument.Info' | translate}}"><i class="pe-7s-info btn-icon-wrapper"> </i></button>
+                                                <!--<button class="mr-2 btn-icon btn-icon-only btn btn-danger" (click)="delete(item)" title="cliquer pour supprimer"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>-->
                                             </div>
                                         </td>
                                     </tr>
