--- a/src/app/private/containers/visitor/containers/index/nav-bar/nav-bar.component.html
+++ b/src/app/private/containers/visitor/containers/index/nav-bar/nav-bar.component.html
@@ -72,7 +72,7 @@
                                     style="background-image: url('assets/images/dropdown-header/city2.jpg');"></div>
                                 <div class="menu-header-content text-center text-white">
                                     <h6 class="menu-header-subtitle mt-0">
-                                        {{ 'Choisir la langue' | translate }}
+                                        {{ 'NavBar.ChooseLanguage'| translate }}
                                     </h6>
                                 </div>
                             </div>
@@ -125,7 +125,7 @@
                                                         <div class="widget-content-right mr-2">
                                                             <button class="btn-pill btn-shadow btn-shine btn btn-focus"
                                                                 (click)="logout()">
-                                                                {{ 'Se Déconnecter' | translate }}
+                                                                {{ 'NavBar.SignOut'| translate }}
                                                             </button>
                                                         </div>
                                                     </div>
